Teste com a inclução da RecycleView

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">CRUD_MySql_Android</string>
+    <string name="app_name">Cadastro Teste MySql/Android</string>
 </resources>
